config/bases/ingress/ingress-tls.yaml
# Copyright 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: opskit
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingress-ip
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "nginx"

  labels:
    app: hello
spec:
  rules:
    - host: www.opskit.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: api-gateway
              servicePort: 8080
  tls:
    - secretName: www-opskit-dev-tls
      hosts:
        - www.opskit.dev
